<resources>
    <string name="app_name">MVVM Quiz Jogador</string>

    <!-- Activity Main -->
    <string name="toolbar_title_main">Quiz Jogadores</string>
    <string name="text_welcome_main">Bem vindo!</string>
    <string name="text_explanation_main">Teste seus conhecimentos sobre jogadores de futebol!</string>
    <string name="btn_start">Iniciar Quiz</string>


    <!-- Activity Levels -->
    <string name="toolbar_title_levels">Levels</string>
    <string name="icon_menu_back_levels">Voltar</string>
    <string name="btn_levels_1">1</string>


    <!-- Activity Quiz -->
    <string name="label_timer">%1$d/10</string>
    <string name="label_timer_seconds">%1$ds</string>
    <string name="label_quiz_card">Joguei por: %1$s</string>
    <string name="text_dica">Veja um vídeo para ganhar uma dica!</string>

    <string name="cont_btn_pause">Pausar</string>
    <string name="cont_btn_option1">Opção 1</string>
    <string name="cont_btn_option2">Opção 2</string>
    <string name="cont_btn_option3">Opção 3</string>
    <string name="cont_btn_option4">Opção 4</string>

    <!-- mensagem do AlertDialog -->
    <string name="dialog_exit_message">Deseja sair?</string>
    <!-- texto dos botões -->
    <string name="dialog_positive">Sim</string>
    <string name="dialog_negative">Não</string>

    
    <!-- Activity Result -->
    <string name="toolbar_title_result">Resultado</string>
    <string name="text_congratulations">Parabéns!</string>
    <string name="label_text_result">Zerou o level %1$d</string>
    <string name="btn_levels">Levels</string>
    <string name="btn_share">Compartilhar</string>

    <!-- mensagem completa de compartilhamento, com placeholder para o level -->
    <string name="share_message">
        Zerei o Level %1$d do Quiz Jogadores de Futebol\n
        Vem jogar também!\n
        https://play.google.com/store/apps/details?id=com.luizeduardobrandao.quizjogadoresdefutebol
    </string>

    <!-- título do chooser -->
    <string name="share_chooser_title">Compartilhar via</string>

</resources>