<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_result"
    tools:context=".view.ResultActivity">

    <!-- Toolbar com ícone de voltar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_levels"
        style="@style/Widget.MyApp.Toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationIconTint="@color/white"
        app:title="@string/toolbar_title_result"
        app:titleTextAppearance="@style/TextAppearance.MyApp.Toolbar.Title"
        app:titleTextColor="@android:color/white" />


    <!-- Card -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_card_result"
        android:layout_marginEnd="@dimen/margin_end_card_result"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp"
        app:layout_constraintBottom_toTopOf="@id/frameBanner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_levels"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/textviewCongrats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_congratulations"
                android:textColor="@color/button_dica"
                android:textSize="@dimen/text_size_congrats_result"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textviewFinishedLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_result"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_finished_result" />

            <!-- Botão voltar -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBackToLevels"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_button_result"
                android:backgroundTint="@color/button_option"
                android:paddingVertical="@dimen/padding_vertical_button_level_result"
                android:text="@string/btn_levels"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_buttons_result" />

            <!-- Botão compartilhar -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnShare"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_button_share"
                android:backgroundTint="@color/button_dica"
                android:paddingVertical="@dimen/padding_vertical_button_level_result"
                android:text="@string/btn_share"
                android:textSize="@dimen/text_size_buttons_result" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <!-- FrameLayout fixo para AdMob -->
    <FrameLayout
        android:id="@+id/frameBanner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>